--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript",
+  "name": "typescript_webapp",
   "version": "1.0.0",
   "description": "Sample application created for TypeScript course on http://eduweb.pl/",
   "main": "index.js",
@@ -7,42 +7,19 @@
     "start": "gulp && node ./dist/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eduweb-pl/typescript-application.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eduweb-pl/typescript-application/issues"
-  },
-  "homepage": "https://github.com/eduweb-pl/typescript-application#readme",
   "dependencies": {
-    "@angular/common": "^2.1.2",
-    "@angular/compiler": "^2.1.2",
-    "@angular/core": "^2.1.2",
-    "@angular/forms": "^2.1.2",
-    "@angular/http": "^2.1.2",
-    "@angular/platform-browser": "^2.1.2",
-    "@angular/platform-browser-dynamic": "^2.1.2",
-    "@angular/router": "^3.1.2",
-    "@angular/upgrade": "^2.1.2",
-    "body-parser": "^1.15.2",
-    "core-js": "^2.4.1",
-    "express": "^4.14.0",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-rc.2",
-    "systemjs": "^0.19.40",
-    "zone.js": "^0.6.26"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
-    "@types/node": "^6.0.46",
-    "del": "^2.2.1",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.6",
-    "gulpclass": "^0.1.1"
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-typescript": "^3.2.3",
+    "gulpclass": "^0.1.2",
+    "typescript": "^2.6.2"
   }
 }
