--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.0.39",
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
   },
