--- a/package.json
+++ b/package.json
@@ -11,9 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "@angular/upgrade": "^5.0.5",
     "@types/express": "^4.0.39",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "core-js": "^2.5.1",
+    "express": "^4.16.2",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.5.3",
+    "systemjs": "^0.20.19",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "del": "^3.0.0",
